# PyAS15

./: .gitignore  README.md  ias15.py  ias15FirstOrder2D.py  ias15PDE.py  pyproject.toml  regression_elipse.py  regression_elipseAdaptive.py  regression_exponentialGrowth.py  regression_exponentialGrowthError.py  regression_exponentialGrowthErrorSingleStep.py  rk4.py  setup.py  test_polynomial.py
.github/workflows/: main.yml
PyAS15/: euler.py  firstOrder1D.py  hamilton.py  ias15FirstOrder2D.py  ias15PDE.py
c_layer/firstOrder/: firstOrder.c  firstOrder.h  makefile  test_firstOrder  test_firstOrder.c
c_layer/hamilton/: hamilton.c  hamilton.h  test_hamilton  test_hamilton.c
tests/: test_polynomial.py
usage/: cerfon.py  cerfonSymmetric.py  elipse.py  elipseAdaptive.py  exponentialGrowth.py  exponentialGrowthSingleStep.py  hyperboloid.py  hyperboloidCompareAdaptive.py  hyperboloidNull.py  hyperboloidNullMultiple.py
usages/: elipse.py  elipseAdaptive.py  exponentialGrowth.py  exponentialGrowthError.py  hyperboloidCompareAdaptive.py  hyperboloidNull.py  psiplot.npy  regression_cerfon.py  regression_exponentialGrowthErrorSingleStep.py  regression_hyperboloid.py  regression_hyperboloidNullMultiple.py
